Add OpenVEX document
This commit adds an [OpenVEX][0] document. OpenVEX allows the publication of
assessments of vulnerability applicability in a standardised format.

Adding this document will primarily allow us to set the [Grype container scanning action][1]
to hard fail. We currently do not have a good way of marking false positives,
which means that inapplicable vulnerabilities show up repeatedly on scans. Adding
these vulnerabilities to the OpenVEX document will remove them from the Grype
scan results, allowing us to focus on new/applicable issues as they arise.

Users might also see a benefit from the fact that they can use the document to
automatically exclude triaged CVEs from their scan results - [Trivy][2] and
[Grype][3] both support OpenVEX.

[0]: https://github.com/openvex/spec
[1]: https://github.com/cilium/cilium/actions/workflows/container-scan.yaml
[2]: https://aquasecurity.github.io/trivy/test/docs/supply-chain/vex/#openvex
[3]: https://github.com/anchore/grype?tab=readme-ov-file#vex-support

Signed-off-by: Feroz Salam <feroz.salam@isovalent.com>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -582,3 +582,4 @@ Vagrantfile @cilium/ci-structure
 /vendor/ @cilium/vendor
 /VERSION @cilium/tophat
 /.clang-format @cilium/contributing
+/.openvex.json @cilium/security
